<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/summary_area"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ayar.oktay.advancedtextview.AdvancedTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="droid_sans"
                    android:maxLines="1"
                    app:autoFit="true"
                    app:font="droid_sans" />

                <ayar.oktay.advancedtextview.AdvancedTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="pacifico"
                    android:textColor="@color/color_crimson"
                    android:maxLines="1"
                    android:layout_alignParentRight="true"
                    app:autoFit="true"
                    app:font="pacifico" />
            </RelativeLayout>

            <RadioGroup
                android:id="@+id/pay_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_vertical_margin">

                <RadioButton
                    android:id="@+id/radio_weixin_pay"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="@string/weixin"/>

                <RadioButton
                    android:id="@+id/radio_zhifubao_pay"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="@string/zhifubao"/>
            </RadioGroup>
        </LinearLayout>
    </ScrollView>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff">

        <ayar.oktay.advancedtextview.AdvancedTextView
            android:id="@+id/pay_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_deep_sky_blue"
            android:maxLines="1"
            android:textSize="16sp"
            android:textColor="@color/color_white_smoke"
            android:text="@string/pay"
            android:gravity="center"
            android:padding="@dimen/default_margin"
            android:layout_margin="@dimen/default_margin"
            android:clickable="true"
            app:font="droid_sans"
            app:autoFit="false"/>

    </FrameLayout>
</LinearLayout>
