<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--<com.ejb.uplus.component.toolbar.TopBar-->
        <!--android:id="@+id/top_bar"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--app:title="@string/app_name"-->
        <!--app:has_back_btn="false"-->
        <!--app:has_right_content="true"-->
        <!--app:right_content="@layout/layout_home_right_content"/>-->

    <com.daimajia.slider.library.SliderLayout
        android:id="@+id/slide_layout"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:pager_animation_span="1500"
        app:pager_animation="Default"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#ddd"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.2"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/buy_bus_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@drawable/btn_normal_bg"
            android:padding="8dp">

            <ImageView
                android:layout_width="@dimen/home_fragment_image_btn_big_size"
                android:layout_height="@dimen/home_fragment_image_btn_big_size"
                android:src="@mipmap/icon_buy_car"
                android:layout_margin="4dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buy_bus"
                android:textColor="#23ac38"
                android:layout_margin="4dp"/>
        </LinearLayout>

        <TextView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#ddd"/>

        <LinearLayout
            android:id="@+id/lease_bus_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@drawable/btn_normal_bg"
            android:padding="8dp">

            <ImageView
                android:layout_width="@dimen/home_fragment_image_btn_big_size"
                android:layout_height="@dimen/home_fragment_image_btn_big_size"
                android:src="@mipmap/icon_rent_car"
                android:layout_margin="4dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lease_bus"
                android:textColor="#23ac38"
                android:layout_margin="4dp"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#ddd"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/charging_pile_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@drawable/btn_normal_bg"
            android:padding="8dp">

            <ImageView
                android:layout_width="@dimen/home_fragment_image_btn_size"
                android:layout_height="@dimen/home_fragment_image_btn_size"
                android:src="@drawable/charging_pile_icon"
                android:layout_margin="4dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/charging_pile"
                android:layout_margin="4dp"/>
        </LinearLayout>

        <TextView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#ddd"/>

        <LinearLayout
            android:id="@+id/instrument_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@drawable/btn_normal_bg"
            android:padding="8dp">

            <ImageView
                android:layout_width="@dimen/home_fragment_image_btn_size"
                android:layout_height="@dimen/home_fragment_image_btn_size"
                android:src="@drawable/instrument_icon"
                android:layout_margin="4dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/instrument"
                android:layout_margin="4dp"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#ddd"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/demo1_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@drawable/btn_normal_bg"
            android:padding="8dp"
            android:clickable="true">

            <ImageView
                android:layout_width="@dimen/home_fragment_image_btn_size"
                android:layout_height="@dimen/home_fragment_image_btn_size"
                android:src="@drawable/charging_pile_icon"
                android:layout_margin="4dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/charging_pile"
                android:layout_margin="4dp"/>
        </LinearLayout>

        <TextView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#ddd"/>

        <LinearLayout
            android:id="@+id/demo2_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@drawable/btn_normal_bg"
            android:padding="8dp"
            android:clickable="true">

            <ImageView
                android:layout_width="@dimen/home_fragment_image_btn_size"
                android:layout_height="@dimen/home_fragment_image_btn_size"
                android:src="@drawable/instrument_icon"
                android:layout_margin="4dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/instrument"
                android:layout_margin="4dp"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#ddd"/>

</LinearLayout>
